Fixed: overflow em texto ao criar a conta

--- a/static/css/sass/paginas/_registro.scss
+++ b/static/css/sass/paginas/_registro.scss
@@ -187,9 +187,17 @@
 
 .input-imagem-custom{
     width: 100%;
+    height: 100%;
     background: #fafafa;
     border: 1px solid grey;
+    overflow: hidden;
+    text-overflow: ellipsis;
     @include rfs(0.313rem, border-radius);
+
+    #foto-perfil-texto, #foto-perfil-input{
+        display: inline-block;
+        vertical-align: top;
+    }
 }
 
 .custom-file-input-button{
